---
sidebar: sidebar 
permalink: whats-new.html 
keywords: 'what"s new, features, new, release notes, enhancements, fixes' 
summary: 瞭解工作負載工廠的 AI 工作負載功能有哪些新功能。 
---
= GenAI BlueXP  工作負載工廠的新功能
:allow-uri-read: 
:icons: font
:imagesdir: ./media/


[role="lead"]
瞭解工作負載工廠的通用 AI 工作負載功能有哪些新功能。



== 2025 年 02 月 2 日



=== 資料來源的檔案類型篩選

GenAI 現在支援在新增資料來源時，選取要納入資料來源掃描的特定檔案類型。

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["將資料來源新增至知識庫"]



=== 資料來源的檔案修改日期篩選

GenAI 現在支援篩選檔案，可在新增資料來源時，依修改日期納入資料來源掃描。您可以為包含的檔案選擇修改日期範圍。

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["將資料來源新增至知識庫"]



=== 支援影像檔案，並加強支援 PDF 檔案

GenAI 現在支援掃描 PDF 檔案中的影像檔案和影像（也稱為多模式檔案支援）。如果您選擇影像檔案，則會將影像中的文字掃描至資料來源，並作為資料使用。此功能包括 PDF 文件中的影像；如果您包含 PDF 檔案類型，則會掃描每個 PDF 中的影像以尋找文字，並將該文字包含在資料來源的資訊中。

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["將資料來源新增至知識庫"]



=== 混合式搜尋與重新部署支援

GenAI 現在使用混合式搜尋並重新排列結果的順序，以增強搜尋結果的相關性。混合式搜尋將關鍵字搜尋與向量和語義搜尋結合在一起。標準關鍵字搜尋結果會以接近的相符項目和語言差異加以擴充，以增強相關性。GenAI 重新排列搜尋結果，只會傳回最相關的結果。

link:https://docs.netapp.com/us-en/workload-genai/ai-workloads-overview.html#benefits-of-using-genai-to-create-generative-ai-applications["瞭解 GenAI 的 BlueXP  工作負載工廠"]



== 2025 年 1 月 05 日



=== 自訂快照名稱

您現在可以為臨機操作快照提供快照名稱。

link:https://docs.netapp.com/us-en/workload-genai/manage-knowledgebase.html#protect-a-knowledge-base-with-snapshots["利用快照保護知識庫"]



=== 自訂 AI 引擎執行個體名稱

您現在可以在部署期間為 AI 引擎執行個體提供自訂名稱。

link:https://docs.netapp.com/us-en/workload-genai/deploy-infrastructure.html["部署 GenAI 基礎架構"]



=== 重建毀損或遺失的 GenAI 基礎架構

如果您的 AI 引擎執行個體毀損或遭到刪除，您可以讓工作負載在出廠時重新建置。工作負載原廠會在重建完成後，自動將您的知識庫重新附加到基礎架構，以便準備好使用。

link:https://docs.netapp.com/us-en/workload-genai/troubleshooting.html["疑難排解"]



== 2024 年 12 月 01 日



=== 從快照複製知識庫

GenAI 的 BlueXP  工作負載工廠現在支援從快照複製知識庫。這可快速恢復知識庫，並利用現有資料來源建立新的知識庫，有助於資料恢復與開發。
