@@ -342,14 +342,12 @@
   <block id="e9d7e3888c0ecac6d332909618bf2a62" category="list-text">內嵌模型</block>
   <block id="52e64b029bc109efaa2d9ddf8bf95697" category="list-text">建立知識庫之前、您必須先啟用您計畫使用的內嵌模型。支援下列內嵌模型：</block>
   <block id="cffe100a2fafd4ed6df5c517d3a0c436" category="list-text">聊天模式</block>
-  <block id="f4b120821069537b900189401cff6123" category="list-text">您必須先啟用您計畫使用的基礎聊天模式、才能建立知識庫。支援下列 Claude 聊天模式：</block>
   <block id="91862a732427fcc9b0f3f7c7e8fd3ef1" category="list-text">Claude 3.5 Sonnet</block>
   <block id="1ae4bf76ece2339f94382079fec8ea1b" category="list-text">Claude 3 Opus</block>
   <block id="5cb902fc92ae2100fc949c459b29f2e0" category="list-text">Claude 3 Haiku</block>
   <block id="dfd281025f82519d079a3bf3bfbabad2" category="list-text">Claude 3 Sonnet</block>
   <block id="48a6d42b28f10b9387da7c0c33136030" category="list-text">Claude 2.1</block>
   <block id="5e1e83b3913f32ce101decea051b2e89" category="list-text">Claude 2.0</block>
-  <block id="a9c39caddabc1e9e831e8874624eeb0b" category="paragraph">由於各 AWS 地區的機型支援不盡相同、請參閱<block ref="eddadb17a88dd68548e655a82b495d2f" category="inline-link-rx"></block> 、確認您可以在計畫部署知識庫的地區使用哪些機型。</block>
   <block id="c16810aa96ec44a060863610996db3f6" category="list-text">您至少需要一個適用於 ONTAP 檔案系統的 FSX ：</block>
   <block id="ae0e1b2daa525e1e1109bf5c13627d7d" category="list-text">NetApp GenAI 引擎將使用一個檔案系統來儲存知識庫所使用的向量資料庫。</block>
   <block id="c076421513a5b28b674cdd0d818b4476" category="paragraph">此適用於 ONTAP 檔案系統的 FSX 必須使用 FlexVol Volume 。不支援支援的支援。FlexGroup</block>
@@ -819,4 +817,19 @@
   <block id="f7fb3b5dc06e03848b8f5ff23bbcd37d" category="paragraph">GenAI 預設會重新排列搜尋結果，以改善結果相關性。為獲得最佳結果，請確保 Amazon 基礎模型組態包括存取重新排名模型，例如 Cohere Rerank 或 Amazon Rerank （如果您所在地區有）。</block>
   <block id="986aee2caba870111e5ce3c5571c82de" category="section-title">2025 年 02 月 2 日</block>
   <block id="26e6f4cc71039ce95ddbb0acdad6891d" category="section-title">2024 年 9 月 29 日</block>
+  <block id="9a7d43c72f0d1a35c2a2cdfb58c6cc0d" category="doc">支援 Amazon Nova 基礎模式</block>
+  <block id="ba0908c46e81d6dfcc41f1af42be123c" category="paragraph">GenAI 現在支援 Amazon Nova 基礎模式。支援 Amazon Nova Micro ， Amazon Nova Lite 和 Amazon Nova Pro 。</block>
+  <block id="5ddfb412189af7bcce0a056c9fcef326" category="paragraph"><block ref="5ddfb412189af7bcce0a056c9fcef326" category="inline-link-macro-rx"></block></block>
+  <block id="1b72fbdbed811fb02ab7310c71e79ab2" category="inline-link">AWS 文件</block>
+  <block id="c3321626512a416bb22de0f62b8458bc" category="list-text">您必須先啟用您計畫使用的基礎聊天模式、才能建立知識庫。由於各 AWS 地區的機型支援不盡相同、請參閱<block ref="0bd10fd36efa0fd68b9fc8a53401f764" category="inline-link-rx"></block> 、確認您可以在計畫部署知識庫的地區使用哪些機型。</block>
+  <block id="1c61d246c37b3dd7fcf1e2812799ee53" category="paragraph">GenAI 支援下列 Anthropic Claude 和 Amazon Nova 機型：</block>
+  <block id="e37cca905470582668e8cf006efd3557" category="list-text">Anthropic Claude ：</block>
+  <block id="22e20ffc2045bc3420e2cb94c47a29ce" category="list-text">Amazon Nova ：</block>
+  <block id="39106736b72a09cf072c2dc73e847b86" category="list-text">Nova Micro</block>
+  <block id="5966dc23b01f7dbdf996a7a860ee9459" category="list-text">Nova Lite （支援影像和文字）</block>
+  <block id="d5c9ae773ceec77e2ca3ed0d6347bf9b" category="list-text">Nova Pro （支援影像和文字）</block>
+  <block id="ddbb727fa06553b8b9d4aab207332c7e" category="paragraph">深入瞭解如何將這些模型與 Amazon Bedrock 搭配使用：</block>
+  <block id="0dd1c2bf85c6e3f8ac28b8d5d343a230" category="list-text"><block ref="0dd1c2bf85c6e3f8ac28b8d5d343a230" category="inline-link-rx"></block></block>
+  <block id="b6c678dfe5e31c8f081fa11ac56bff46" category="inline-link">在 Amazon Bedrock 主控台開始使用 Amazon Nova</block>
+  <block id="cafb3db15a71932288c768a7beb404b4" category="list-text"><block ref="cafb3db15a71932288c768a7beb404b4" category="inline-link-rx"></block></block>
 </blocks>
